make board activity and making GUIs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainGame"></activity>
+        <activity android:name=".AddPieceActivity"></activity>
+        <activity android:name=".MakeBoardActivity" />
+        <activity android:name=".MainGame" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
