--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddPieceActivity"></activity>
+        <activity android:name=".AddPieceActivity" />
         <activity android:name=".MakeBoardActivity" />
         <activity android:name=".MainGame" />
         <activity android:name=".MainActivity">
